# regexparser

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  regexparser.py  setup.py  test_regexparser.py  textparser.py
.github/workflow/: mkdocs-ci.yml
.github/workflows/: mkdocs-ci.yml
docs/: index.md  reference.md
reference/: index.html
