[tool.poetry]
name = "regexparser"
version = "0.1.0"
description = "Simple parser for small text chunks"
authors = ["wilsonfreitas <wilson.freitas@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "regexparser.py"}]

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.13"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
